--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="content">
       <h1>Google Food</h1>
-      <p>This is team 47's group project.</p>
+      <p>This is team 47's group project...</p>
      </div>
   </body>
 </html>
