Update page margins, add images folder and image as example, add Google Font API.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,12 +5,14 @@
     <title>Google Food</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="content">
       <h1>Google Food</h1>
       <p>This is team 47's group project....</p>
-      <p>Testing .gitignore</p>
      </div>
   </body>
 </html>
