Add table to index and draft of non-working servlet.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Google Food</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +13,8 @@
   <body>
     <div id="content">
       <h1>Google Food</h1>
-      <p>This is team 47's group project....</p>
+      <p>This is team 47's group project...</p>
      </div>
+     <div id="table_div"></div>
   </body>
 </html>
