Adding datastore signup and sign in

--- a/src/main/webapp/incorrectLogin.html
+++ b/src/main/webapp/incorrectLogin.html
@@ -11,11 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div id="content">
-      <h1>Google Food</h1>
-      <p>This is team 47's group project...</p>
-     </div>
-     <div id="table_div"></div>
+   <h1>Username or password is incorrect! Please go back and try again</h1>
   </body>
-  <a href="/signin.html">to signin</a> <a href="/signup.html">to signup</a>
+  
 </html>
