Create home page with design

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,4 +18,5 @@
      <div id="table_div"></div>
   </body>
   <a href="/signin.html">to signin</a> <a href="/signup.html">to signup</a>
-</html>
+  <a href="indextemporary.html">Index temp
+  </a>
