Update servlet link

--- a/src/main/webapp/indextemporary.html
+++ b/src/main/webapp/indextemporary.html
@@ -26,7 +26,7 @@
     </div>
 
         <div class="modal" id="signin">
-            <form action="/action_page.php" class="modal-content animate" method="POST">
+            <form action="/sign-up" class="modal-content animate" method="POST">
                 <div class="imgcontainer">
                     <span onclick="document.getElementById('signin').style.display='none'" 
                     class="close" title="Close Modal">&times;</span>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="modal" id="signup">
-            <form action="/action_page.php" class="modal-content animate" method="POST">
+            <form action="/sign-up" class="modal-content animate" method="POST">
                 <div class="imgcontainer">
                     <span onclick="document.getElementById('signup').style.display='none'"
                     class="close" title="Close Modal">&times;</span>
