--- a/src/main/webapp/indextemporary.html
+++ b/src/main/webapp/indextemporary.html
@@ -13,6 +13,11 @@
     <div class="top-left">
         <h2>Google Food</h2>
     </div>
+    <a href="/aboutus.html">
+        <div class="top-right">
+            <h2>About Us</h2>
+        </div>
+    </a>
     <div class="centered2">
         Recipes for everyone
     </div>
