--- a/src/main/webapp/indextemporary.html
+++ b/src/main/webapp/indextemporary.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="modal" id="signup">
-            <form action="/action_page.php" class="modal-content animate" method="POST">
+            <form action="/sign-up" class="modal-content animate" method="POST">
                 <div class="imgcontainer">
                     <span onclick="document.getElementById('signup').style.display='none'"
                     class="close" title="Close Modal">&times;</span>
@@ -55,7 +55,7 @@
                     <label for="email">Email</label>
                     <input id="email" placeholder="Email" type="email" name="email" required/>
                     <label for="name">Username</label>
-                    <input id="name" placeholder="Username" type="text" required />
+                    <input id="name" placeholder="Username" type="text" name="username" required />
                     <label for="password">Password</label>
                     <input id="password" placeholder="Password" type="password" name="password" required/>
                     <label for="Password">Repeat Password</label>
