--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,5 +17,5 @@
      </div>
      <div id="table_div"></div>
   </body>
-  <a href="/signin.html">to signin</a> <a href="/signup.html">to signup</a>
+  <a href="/signin.html">to signin</a> <a href="/signup.html">to signup</a><a href="/search.html">to search</a>
 </html>
