--- a/src/main/webapp/indextemporary.html
+++ b/src/main/webapp/indextemporary.html
@@ -71,9 +71,9 @@
                     <input style="width: 120px;" date = "dob" placeholder="Birthday" type="date" name="dob" required/>
                     <br>Do you have any allergies?    
                     <label for="yes">Yes</label>
-                    <input style="width: 25px;" type="checkbox" id="yes" name="yes" value="Yes">
+                    <input style="width: 25px;" type="radio" id="yes" name="allergy" value="Yes">
                     <label for="no">No</label>
-                    <input style=" width: 25px;"  type="checkbox" id="no" name="no" value="No"><br>
+                    <input style="width: 25px;" type="radio" id="no" name="allergy" value="No"><br>
                     <button style="background-color: darkgrey;" type="submit">Sign up</button>
                 </div>
             </form>
