Putting profile on search

--- a/src/main/webapp/indextemporary.html
+++ b/src/main/webapp/indextemporary.html
@@ -44,7 +44,7 @@
                     <label for="password">Password</label>
                     <input id="password2" placeholder="Password" type="password" name = "pw-signin" required/>
                     <button style="background-color: darkgrey;" type="button" onclick="signIn()">Sign in</button>
-                    <a id = "switchButton" href="signedIn.html"display="none"> </a>
+                    <a id = "switchButton" href="search.html"display="none"> </a>
                 </div>
             </form>
         </div>
