--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -11,6 +11,15 @@
   <body>
     <main id="main" class="large-8 medium-8 columns" role="main">
     <header class="article-header">
+        <div id ="sign-message">You're signed in! </div>
+    <button id="showProfile" onclick="showProfile()">Show profile</button>
+    <li>
+        <div id = "nameProfile"> </div>
+        <div id = "usernameProfile"></div>
+        <div id = "emailProfile"></div>
+        
+
+    </li>
         <h1 class="entry-title single-title" itemprop="headline">Advanced Recipe Search</h1>
     </header>
 
