resolving form action

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -17,7 +17,7 @@
     <div class="row collapse">
         <div class="small-12 columns">
         <p>Enter your search keywords and choose from multiple <span data-tooltip="1mvrpj-tooltip" aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="2" title="" aria-describedby="ir2kbl-tooltip" data-yeti-box="ir2kbl-tooltip" data-toggle="ir2kbl-tooltip" data-resize="ir2kbl-tooltip" data-events="resize">filters</span> below.</p>
-        <form action="https://www.allergicliving.com/advanced-search/" method="GET" name="wp-advanced-search">
+        <form>
             <input name="search_query" type="text" value="" placeholder="Search recipe keywords..." />
             <div class="columns large-4">
                 <div class="label-container">
