--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -23,6 +23,8 @@
         <h1 class="entry-title single-title" itemprop="headline">Advanced Recipe Search</h1>
     </header>
 
+    <div id="table_div"></div>
+
     <div class="row collapse">
         <div class="small-12 columns">
         <p>Enter your search keywords and choose from multiple <span data-tooltip="1mvrpj-tooltip" aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="2" title="" aria-describedby="ir2kbl-tooltip" data-yeti-box="ir2kbl-tooltip" data-toggle="ir2kbl-tooltip" data-resize="ir2kbl-tooltip" data-events="resize">filters</span> below.</p>
