--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style1.css" />
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="script.js"></script>
     <script src="script2.js"></script>
   </head>
   <body>
