--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -25,102 +25,11 @@
     </li>
         <h1 class="entry-title single-title" itemprop="headline">Recipe Search</h1>
     </header>
-<!-- 
-    <form id="form"> 
-        <input type="search" id="query" name="q" placeholder="Search...">
-        <p>Recipes without </p><button>Search</button>
-    </form> -->
 
     <div class="block">
-        <label id="myLabel">Recipes without</label>
-        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for ingredients...">
+        <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Recipes without...">
     </div>
     
-    <table id="myTable">
-        <tr class="header">
-            <th style="width:40%;">Name</th>
-            <th style="width:60%;">Ingredients</th>
-        </tr>
-        <tr>
-            <td>Alfreds Futterkiste</td>
-            <td>Germany</td>
-        </tr>
-        <tr>
-            <td>Berglunds snabbkop</td>
-            <td>Sweden</td>
-        </tr>
-        <tr>
-            <td>Island Trading</td>
-            <td>UK</td>
-        </tr>
-        <tr>
-            <td>Koniglich Essen</td>
-            <td>Germany</td>
-        </tr>
-    </table>
-
-
-
-    <!-- <div class="row collapse">
-        <div class="small-12 columns">
-        <p>Enter your search keywords and choose from multiple <span data-tooltip="1mvrpj-tooltip" aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="2" title="" aria-describedby="ir2kbl-tooltip" data-yeti-box="ir2kbl-tooltip" data-toggle="ir2kbl-tooltip" data-resize="ir2kbl-tooltip" data-events="resize">filters</span> below.</p>
-        <form>
-            <input name="search_query" type="text" value="" placeholder="Search recipe keywords..." />
-            <div class="columns large-4">
-                <div class="label-container">
-                    <label for="tax_recipe_category">Allergen</label>
-                </div>
-                <select id="tax_recipe_category" name="tax_recipe_category[]" multiple="multiple" class="wpas-multi-select ">
-                    <option value="eggs">Eggs</option>
-                    <option value="fish">Fish</option>
-                    <option value="milkdairy">Milk/Dairy</option>
-                    <option value="mustard">Mustard</option>
-                    <option value="legumes">Other Legumes</option>
-                    <option value="peanut-allergen-diet">Peanut</option>
-                    <option value="sesame">Sesame</option>
-                    <option value="shellfish">Shellfish</option>
-                    <option value="soy">Soy</option>
-                    <option value="sulphites">Sulphites</option>
-                    <option value="tree-nut-allergen-diet">Tree Nuts</option>
-                    <option value="wheat-allergen-diet">Wheat</option>
-                </select>
-            </div>
-            <div class="columns large-4">
-                <div class="label-container">
-                <label for="tax_recipe_category">Course/Food Type</label>
-                </div>
-                <select id="tax_recipe_category" name="tax_recipe_category[]" multiple="multiple" class="wpas-multi-select ">
-                <option value="appetizers-course-food-type">Appetizers</option>
-                <option value="breakfast">Breakfast</option>
-                <option value="cakes-cupcakes-course-food-type">Cakes, Cupcakes</option>
-                <option value="cookies-courses-food-types">Cookies</option>
-                <option value="other-desserts-course-food-type">Dessert</option>
-                <option value="drinks-course-food-type">Drinks</option>
-                <option value="lunches-course-food-type">Lunches</option>
-                <option value="main-dishes-course-food-type">Main Dishes</option>
-                <option value="pies-squares-course-food-type">Pies, Squares</option>
-                <option value="salads-course-food-type">Salads</option>
-                </select>
-            </div>
-            <div class="columns large-6">
-                <div class="label-container">
-                <label for="tax_recipe_category">Special Diet</label>
-                </div>
-                <select id="tax_recipe_category" name="tax_recipe_category[]" multiple="multiple" class="wpas-multi-select ">
-                <option value="gluten-free-recipes-2">Celiac, Gluten-free</option>
-                <option value="for-kids">Vegetarian</option>
-                <option value="vegan-allergen-diet">Vegan</option>
-                <option value="for-kids">Pregnant</option>
-                </select>
-            </div>
-            <input type="submit" value="Search" />
-            <input type="reset" value="Reset" />
-            <button>Clear</button>
-            <input name="wpas_id" type="hidden" value="advanced-search" />
-            <input name="wpas_submit" type="hidden" value="1" />
-        </form>
-    </div> -->
-
   </body>
 </html>
 
@@ -130,12 +39,12 @@
       var input, filter, table, tr, td, i, txtValue;
       input = document.getElementById("myInput");
       filter = input.value.toUpperCase();
-      table = document.getElementById("myTable");
+      table = document.getElementById("table_div");
       tr = table.getElementsByTagName("tr");
     
       // Loop through all table rows, and hide those who match the search query
       for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[1];
+        td = tr[i].getElementsByTagName("td")[2];
         if (td) {
           txtValue = td.textContent || td.innerText;
           if (txtValue.toUpperCase().indexOf(filter) > -1) {
