Add div for datatable show that it shows up on the page.

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -29,7 +29,8 @@
     <div class="block">
         <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Recipes without...">
     </div>
-    
+    <div id="table_div"></div>
+
   </body>
 </html>
 
