Move indextemporary to index.html and send redirect servlet to index.

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="/indextemporary.html">
+    <a href="/index.html">
     <div class="top-left">
         <h2>Google Food</h2>
     </div>
