--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -12,17 +12,19 @@
     <script src="script2.js"></script>
   </head>
   <body>
+      <div class="top-left">
+            <h2>Google Food</h2>
+        </div>
+    
     <main id="main" class="large-8 medium-8 columns" role="main">
     <header class="article-header">
-        <div id ="sign-message">You're signed in! </div>
-    <button id="showProfile" onclick="showProfile()">Show profile</button>
-    <li>
-        <div id = "nameProfile"> </div>
-        <div id = "usernameProfile"></div>
-        <div id = "emailProfile"></div>
-        
-
-    </li>
+        <div class="top-right" id ="sign-message">You're signed in! </div>
+        <button class="corner" id="showProfile" onclick="showProfile()">Show profile</button>
+        <li class="corner">
+            <div id = "nameProfile"> </div>
+            <div id = "usernameProfile"></div>
+            <div id = "emailProfile"></div>
+        </li>
         <h1 class="entry-title single-title" itemprop="headline">Recipe Search</h1>
     </header>
 
