Update search.html for styling logo and Google table, fix width of search bar, remove hanging dot, delete unnecessary style file.

--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Google Food - Search</title>
     <link rel="stylesheet" href="style1.css" />
-    <link rel="stylesheet" href="stylesearch.css">
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="script.js"></script>
     <script src="script2.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100;200;300;400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-      <div class="top-left">
+    <a href="/index.html">
+        <div class="top-left">
             <h2>Google Food</h2>
         </div>
+    </a>
     
     <main id="main" class="large-8 medium-8 columns" role="main">
     <header class="article-header">
         <div class="top-right" id ="sign-message">You're signed in! </div>
         <button class="corner" id="showProfile" onclick="showProfile()">Show profile</button>
-        <li class="corner">
+        <li type="none" class="corner">
             <div id = "nameProfile"> </div>
             <div id = "usernameProfile"></div>
             <div id = "emailProfile"></div>
         </li>
-        <h1 class="entry-title single-title" itemprop="headline">Recipe Search</h1>
+        <h1>Recipe Search</h1>
     </header>
 
     <div class="block">
