Update about us page and any other navigation systems/styling.

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -11,7 +11,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <a href="/index.html">
+    <div class="headerImage">
+    <a href="https://summer22-sps-47.appspot.com/">
     <div class="top-left">
         <h2>Google Food</h2>
     </div>
@@ -21,8 +22,12 @@
             <h2>About Us</h2>
         </div>
     </a>
-    <div id="headerImage">
-    </div>
+    <div class="centered">OUR MISSION</div>
+</div>
+<h1>Where health is concerned, understanding what is in your food is more important now than ever before. Many people have allergies and restrictions that limit what they can eat, and unfortunately, this results in lots of time spent reading the ingredient lists on packages before allowing themselves to eat it. Additionally, packaging varies heavily in its design; it can be hard to read, have dense and unfamiliar industry jargon, or be unavailable on a barcode-based database.</h1>
+<h1>Google Food was made to improve the quality of life of individuals with stricter than normal dietary restrictions. Rather than having to spend time manually reading ingredient labels, users of our product will receive the benefit of a streamlined process that provides results in an intuitive and efficient manner. Ingredients matter, and Google Food analyzes ingredients by looking past pretty packaging and clever marketing tactics to break down what’s really in your food.
+</h1>
+<p>WHO WE ARE</p>
     <div class="row"> 
         <div class="column">
           <img src="/images/SiemaPic.png" style="width:100%">
