--- a/src/main/webapp/search.html
+++ b/src/main/webapp/search.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <a href="/index.html">
+    <a href="https://summer22-sps-47.appspot.com/">
         <div class="top-left">
             <h2>Google Food</h2>
         </div>
