Update about us page with our majors and one description.

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -33,24 +33,30 @@
           <img src="/images/SiemaPic.png" style="width:100%">
           <h3>Siema Alam</h3>
           <h4>Macaulay Honors at City College</h4>
+          <h4><i>Computer Science and Psychology</i></h4>
+          <h4 style="font-weight: 300;">Hello everyone! In this project, I worked on connecting a database so that it would be visible and organized by using Google Charts, as well as it being responsive to the search bar. I also created this about us page to share our mission! I designed alongside Oluwamayokun to ensure our user-facing systems were simple, clean, and easy for everyone to use. 
+        </h4>
           <a href="https://www.linkedin.com/in/siemaalam/" class="fa fa-linkedin" target="_blank"></a>
         </div>
         <div class="column">
           <img src="/images/MayokunPic.png" style="width:100%">
           <h3>Oluwamayokun Oyefeso</h3>
           <h4>Fisk University</h4>
+          <h4><i>Computer Science and Mathematics</i></h4>
           <a href="https://www.linkedin.com/in/oluwamayokun/" class="fa fa-linkedin" target="_blank"></a>
         </div>  
         <div class="column">
           <img src="/images/SrishtiPic.png" style="width:100%">
           <h3>Srishti Singh</h3>
           <h4>Georgia Institute of Technology</h4>
+          <h4><i>Computational Media</i></h4>
           <a href="https://www.linkedin.com/in/srishtisinghh/" class="fa fa-linkedin" target="_blank"></a>
         </div>
         <div class="column">
           <img src="/images/ChasePic.png" style="width:100%">
           <h3>Chase Nwamu</h3>
           <h4>Stanford University</h4>
+          <h4><i>Computer Science</i></h4>
           <a href="https://www.linkedin.com/in/chase-nwamu-586ab2230/" class="fa fa-linkedin" target="_blank"></a>
         </div>
     </div>
