--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -43,6 +43,11 @@
           <h3>Oluwamayokun Oyefeso</h3>
           <h4>Fisk University</h4>
           <h4><i>Computer Science and Mathematics</i></h4>
+          <h4 style="font-weight: 300;">
+            I had a great time working with my teammates-Chase, Siema and Srishti on building Google Food, and online ingridient analyzer. 
+            I worked on the front-end of the development, using HTML, CSS & JavaScript to design the sign up/in forms and web page layout.
+            It was really nice learning new tools and creating ambient UI/UX.
+        </h4>
           <a href="https://www.linkedin.com/in/oluwamayokun/" class="fa fa-linkedin" target="_blank"></a>
         </div>  
         <div class="column">
@@ -56,7 +61,8 @@
           <img src="/images/ChasePic.png" style="width:100%">
           <h3>Chase Nwamu</h3>
           <h4>Stanford University</h4>
-          <h4><i>Computer Science</i></h4>
+          <h4><i>Computer Science</i>
+        </h4>
           <a href="https://www.linkedin.com/in/chase-nwamu-586ab2230/" class="fa fa-linkedin" target="_blank"></a>
         </div>
     </div>
