Update About Us page with descriptions.

--- a/src/main/webapp/aboutus.html
+++ b/src/main/webapp/aboutus.html
@@ -25,7 +25,10 @@
     <div class="centered">OUR MISSION</div>
 </div>
 <h1>Where health is concerned, understanding what is in your food is more important now than ever before. Many people have allergies and restrictions that limit what they can eat, and unfortunately, this results in lots of time spent reading the ingredient lists on packages before allowing themselves to eat it. Additionally, packaging varies heavily in its design; it can be hard to read, have dense and unfamiliar industry jargon, or be unavailable on a barcode-based database.</h1>
-<h1>Google Food was made to improve the quality of life of individuals with stricter than normal dietary restrictions. Rather than having to spend time manually reading ingredient labels, users of our product will receive the benefit of a streamlined process that provides results in an intuitive and efficient manner. Ingredients matter, and Google Food analyzes ingredients by looking past pretty packaging and clever marketing tactics to break down what’s really in your food.
+<h1>Google Food was made to improve the quality of life of individuals with stricter than normal dietary restrictions. Rather than having to spend time manually reading ingredient labels, users of our product will receive the benefit of a streamlined process that provides results in an intuitive and efficient manner. Ingredients matter, and Google Food analyzes ingredients by looking past pretty packaging and clever marketing tactics to break down what’s really in your food. 
+</h1>
+<h1>
+    In the future, we would like to develop this project further by including a portal system where users can monitor their health and create appointments with their doctors. In doing so, we hope that we can have one place where we make healthy eating accessible and easy for everyone.
 </h1>
 <p>WHO WE ARE</p>
     <div class="row"> 
@@ -34,7 +37,7 @@
           <h3>Siema Alam</h3>
           <h4>Macaulay Honors at City College</h4>
           <h4><i>Computer Science and Psychology</i></h4>
-          <h4 style="font-weight: 300;">Hello everyone! In this project, I worked on connecting a database so that it would be visible and organized by using Google Charts, as well as it being responsive to the search bar. I also created this about us page to share our mission! I designed alongside Oluwamayokun to ensure our user-facing systems were simple, clean, and easy for everyone to use. 
+          <h4 style="font-weight: 300;">Hello everyone! In this project, I first launched the website using Google projects and the app engine. I then worked on connecting a food database so that foods and ingredients would be visible and organized by using Google Charts, as well as it being responsive to the search bar. I also created this about us page to share our mission, and I hope that you enjoy our MVP product! 
         </h4>
           <a href="https://www.linkedin.com/in/siemaalam/" class="fa fa-linkedin" target="_blank"></a>
         </div>
@@ -43,11 +46,9 @@
           <h3>Oluwamayokun Oyefeso</h3>
           <h4>Fisk University</h4>
           <h4><i>Computer Science and Mathematics</i></h4>
-          <h4 style="font-weight: 300;">
-            I had a great time working with my teammates-Chase, Siema and Srishti on building Google Food, and online ingridient analyzer. 
-            I worked on the front-end of the development, using HTML, CSS & JavaScript to design the sign up/in forms and web page layout.
-            It was really nice learning new tools and creating ambient UI/UX.
-        </h4>
+          <h4 style="font-weight: 300;"> I had a great time working with my teammates-Chase, Siema and Srishti on building Google Food, and online ingridient analyzer. 
+            I worked on the front-end of the development, using HTML, CSS & JavaScript to design the sign up/in forms and web page layout, as well as connecting the front-end to the back-end.
+            It was really nice learning new tools and creating ambient UI/UX.</h4> 
           <a href="https://www.linkedin.com/in/oluwamayokun/" class="fa fa-linkedin" target="_blank"></a>
         </div>  
         <div class="column">
@@ -55,14 +56,16 @@
           <h3>Srishti Singh</h3>
           <h4>Georgia Institute of Technology</h4>
           <h4><i>Computational Media</i></h4>
+          <h4 style="font-weight: 300;">In this project, my main contribution was implementing the search page and its functionality using our associated database. I worked with Siema in working through the ins and outs of our data, and the best way to streamline the search and display process. I also was responsible for the overall motivation of our project, as I am a vegetarian and have strict dietary restrictions, leading me to our MVP product idea.
+        </h4>
           <a href="https://www.linkedin.com/in/srishtisinghh/" class="fa fa-linkedin" target="_blank"></a>
         </div>
         <div class="column">
           <img src="/images/ChasePic.png" style="width:100%">
           <h3>Chase Nwamu</h3>
           <h4>Stanford University</h4>
-          <h4><i>Computer Science</i>
-        </h4>
+          <h4><i>Computer Science</i></h4>
+          <h4 style="font-weight: 300;">Hi all! In this project, I worked on the sign up and sign in features of the app. With help from the rest of the team, I worked to ensure that user profile data can be successfully stored at sign up and displayed upon sign in.</h4>
           <a href="https://www.linkedin.com/in/chase-nwamu-586ab2230/" class="fa fa-linkedin" target="_blank"></a>
         </div>
     </div>
